[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/simple_rounded.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/gfx/buttons/revert_button.png" type="Texture" id=2]
[ext_resource path="res://assets/gfx/buttons/okay_button.png" type="Texture" id=3]
[ext_resource path="res://confirmation/confirmation.gd" type="Script" id=4]
[ext_resource path="res://assets/gfx/boxes/confirmation_box.png" type="Texture" id=5]

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=1]
size = 45
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="Confirmation" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -640.0
margin_bottom = -360.0
rect_min_size = Vector2( 640, 360 )
script = ExtResource( 4 )

[node name="BG" type="TextureRect" parent="."]
self_modulate = Color( 0.392157, 0.607843, 1, 1 )
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="VertCT" type="VBoxContainer" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Message" type="Label" parent="BG/VertCT"]
margin_right = 620.0
margin_bottom = 236.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Are you sure you want to end the game?"
align = 1
valign = 1
autowrap = true

[node name="ButtonCT" type="HBoxContainer" parent="BG/VertCT"]
margin_top = 240.0
margin_right = 620.0
margin_bottom = 340.0
rect_min_size = Vector2( 0, 100 )
alignment = 1

[node name="Back" type="TextureButton" parent="BG/VertCT/ButtonCT"]
margin_right = 308.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="Okay" type="TextureButton" parent="BG/VertCT/ButtonCT"]
margin_left = 312.0
margin_right = 620.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[connection signal="pressed" from="BG/VertCT/ButtonCT/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="BG/VertCT/ButtonCT/Okay" to="." method="_on_Okay_pressed"]
